--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "server": "tsx src/server/index.ts",
     "server:dev": "tsx watch src/server/index.ts",
+    "client": "tsx src/client/index.ts",
+    "client:dev": "tsx watch src/client/index.ts",
     "test": "vitest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
