--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "server": "tsx src/server/index.ts",
     "server:dev": "tsx watch src/server/index.ts",
     "client": "tsx src/client/index.ts",
-    "client:dev": "tsx watch src/client/index.ts",
-    "test": "vitest"
+    "client:dev": "tsx src/client/index.ts",
+    "test": "vitest",
+    "lint": "eslint . --ext .ts --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/readline-sync": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.42.0",
@@ -30,6 +32,7 @@
     "vitest": "^0.31.4"
   },
   "dependencies": {
-    "dotenv": "^16.1.3"
+    "dotenv": "^16.1.3",
+    "readline-sync": "^1.4.10"
   }
 }
