--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "module": "commonjs",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@types/*": ["src/@types/*"],
+      "client/*": ["src/client/*"],
+      "server/*": ["src/server/*"],
+      "config/*": ["src/config/*"],
+      "utils/*": ["src/utils/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
