--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
       "@types/*": ["src/@types/*"],
       "client/*": ["src/client/*"],
       "server/*": ["src/server/*"],
-      "config/*": ["src/config/*"],
-      "utils/*": ["src/utils/*"]
+      "config/*": ["src/config/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
