--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
     "no-unsafe-assignment": 0,
     "no-constant-condition": 0,
     "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/restrict-template-expressions": 0,
     "no-unused-vars": [
       0,
       {
