--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "bracketSpacing": true,
   "printWidth": 140,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "tabWidth": 2,
   "useTabs": false
 }
