--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,7 +61,7 @@
         "bracketSpacing": true,
         "printWidth": 140,
         "singleQuote": true,
-        "trailingComma": "none",
+        "trailingComma": "es5",
         "tabWidth": 2,
         "useTabs": false,
         "endOfLine": "auto"
