--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "dotenv": "^16.1.3",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "split-file": "^2.3.0"
   }
 }
