feat: adicionar mais teste na aplicação

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "include": ["./src/"],
+  "include": ["./src/", "scripts"],
+  "exclude": ["node_modules", "scripts"],
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
