--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "ecmaVersion": 12
   },
   "plugins": ["prettier", "import", "@typescript-eslint"],
+
   "rules": {
     "@typescript-eslint/no-unused-vars": ["error"],
     "no-param-reassign": 0,
@@ -49,6 +50,7 @@
     "no-constant-condition": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/restrict-template-expressions": 0,
+    "@typescript-eslint/no-floating-promises": 0,
     "no-unused-vars": [
       0,
       {
