--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@types/*": ["src/@types/*"],
       "client/*": ["src/client/*"],
       "server/*": ["src/server/*"],
-      "config/*": ["src/config/*"]
+      "config/*": ["src/config/*"],
+      "utils/*": ["src/utils/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
