feat: response controller

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "client/*": ["src/client/*"],
       "server/*": ["src/server/*"],
       "config/*": ["src/config/*"],
-      "shared/*": ["src/shared/*"]
+      "shared/*": ["src/shared/*"],
+      "utils/*": ["src/utils/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
