--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,8 @@
     "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "@typescript-eslint/require-await": 0,
+    "@typescript-eslint/no-unsafe-member-access": 0,
+    "@typescript-eslint/no-unsafe-assignment": 0,
     "no-unused-vars": [
       0,
       {
