--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "@types/readline-sync": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
@@ -33,7 +34,7 @@
   },
   "dependencies": {
     "dotenv": "^16.1.3",
-    "readline-sync": "^1.4.10",
-    "split-file": "^2.3.0"
+    "md5": "^2.3.0",
+    "readline-sync": "^1.4.10"
   }
 }
